[gd_scene load_steps=16 format=3 uid="uid://x2p0vcinf1a2"]

[ext_resource type="Script" path="res://Main/SAGD/Assets/loading_screen.gd" id="1_7s7mq"]
[ext_resource type="Texture2D" uid="uid://nxjicu0qn78" path="res://Main/SAGD/32x32_loading10.png" id="1_nhohf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mhh16"]
atlas = ExtResource("1_nhohf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uid1r"]
atlas = ExtResource("1_nhohf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cow6y"]
atlas = ExtResource("1_nhohf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvuwe"]
atlas = ExtResource("1_nhohf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mswag"]
atlas = ExtResource("1_nhohf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfaws"]
atlas = ExtResource("1_nhohf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gxig"]
atlas = ExtResource("1_nhohf")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0shg"]
atlas = ExtResource("1_nhohf")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etqe4"]
atlas = ExtResource("1_nhohf")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b2ol"]
atlas = ExtResource("1_nhohf")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yunb6"]
atlas = ExtResource("1_nhohf")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3gup"]
atlas = ExtResource("1_nhohf")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2yy4c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhh16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uid1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cow6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvuwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mswag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfaws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gxig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0shg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etqe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b2ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yunb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3gup")
}],
"loop": true,
"name": &"Spin",
"speed": 7.0
}]

[node name="Loading screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 10.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7s7mq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0431373, 0.0784314, 0.0862745, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(580.5, 329.5)
scale = Vector2(6.53127, 6.53127)
sprite_frames = SubResource("SpriteFrames_2yy4c")
animation = &"Spin"
autoplay = "Spin"
frame_progress = 0.480629

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 72.0
offset_right = 751.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 86
text = "Fun Fact"

[node name="Label2" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = 151.0
offset_right = 209.205
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
text = "The longest tower in the world is Burj Kalipha
                  its 829.8 m (2,722 ft) long."
fit_content = true

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Label3" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 476.0
offset_top = 269.0
offset_right = 683.0
offset_bottom = 380.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 81
text = "Done"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
